--- a/Deakin Helper/Deakin Helper/Deakin_Helper.WinPhone/Deakin_Helper.WinPhone.csproj
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper.WinPhone/Deakin_Helper.WinPhone.csproj
@@ -96,6 +96,11 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon_assignments.png" />
+    <Content Include="icon_classes.png" />
+    <Content Include="icon_cloud.png" />
+    <Content Include="icon_home.png" />
+    <Content Include="icon_settings.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
