--- a/Deakin Helper/Deakin Helper/Deakin_Helper.Droid/Deakin_Helper.Droid.csproj
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper.Droid/Deakin_Helper.Droid.csproj
@@ -124,6 +124,7 @@
     <Compile Include="SQLite_Android.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
