--- a/Deakin Helper/Deakin Helper/Deakin_Helper.iOS/Info.plist
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper.iOS/Info.plist
@@ -49,4 +49,19 @@
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
   </dict>
+  <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSExceptionDomains</key>
+        <dict>
+            <key>deakin.edu.au</key>
+            <dict>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+                <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSTemporaryExceptionMinimumTLSVersion</key>
+                <string>TLSv1.1</string>
+            </dict>
+        </dict>
+    </dict>
 </plist>
