--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Deakin_Helper.csproj
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Deakin_Helper.csproj
@@ -60,8 +60,10 @@
     <Compile Include="Activity\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Database\SettingsDatabase.cs" />
     <Compile Include="Database\Classes.cs" />
     <Compile Include="Database\ClassesDatabase.cs" />
+    <Compile Include="Database\Settings.cs" />
     <Compile Include="Database\TodoItem.cs" />
     <Compile Include="Database\TodoItemDatabase.cs" />
     <Compile Include="Database\ISQLite.cs" />
