--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Deakin_Helper.csproj
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Deakin_Helper.csproj
@@ -41,6 +41,9 @@
     <Compile Include="Activity\ClassesPage.xaml.cs">
       <DependentUpon>ClassesPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Activity\AssignmentPageX.xaml.cs">
+      <DependentUpon>AssignmentPageX.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Activity\CloudDeakinPage.xaml.cs">
       <DependentUpon>CloudDeakinPage.xaml</DependentUpon>
     </Compile>
@@ -60,7 +63,9 @@
     <Compile Include="Activity\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Database\Assignment.cs" />
     <Compile Include="Database\Classes.cs" />
+    <Compile Include="Database\AssignmentDatabase.cs" />
     <Compile Include="Database\ClassesDatabase.cs" />
     <Compile Include="Database\TodoItem.cs" />
     <Compile Include="Database\TodoItemDatabase.cs" />
@@ -173,6 +178,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Activity\ClassesPageX.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Activity\AssignmentPageX.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
