--- a/Deakin Helper/Deakin Helper/Deakin_Helper.Droid/Deakin_Helper.Droid.csproj
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper.Droid/Deakin_Helper.Droid.csproj
@@ -124,6 +124,7 @@
     <Compile Include="SQLite_Android.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
@@ -172,7 +173,7 @@
     <AndroidResource Include="Resources\drawable\icon_settings.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\icon_addClasses.png" />
+    <AndroidResource Include="Resources\drawable\Add.png" />
     <Content Include="Resources\drawable\check.png" />
     <Content Include="Resources\drawable\plus.png" />
   </ItemGroup>
